--- a/profile.html
+++ b/profile.html
@@ -1,249 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Profile</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      height: 100vh;
-      overflow: hidden;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: orange;
+        }
 
-    .topbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      background-color: #333;
-      color: white;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
-    }
+        .profile-container {
+            max-width: 400px;
+            margin: 100px auto;
+            margin-top: 0px;
+            padding: 20px;
+            background-color: orange;
+            /*border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+        }
 
-    .topbar .title {
-      font-size: 24px;
-    }
+        .topbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+        }
 
-    .menu-button {
-      background: none;
-      border: none;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-    }
+        .topbar .title {
+            flex-grow: 1;
+            text-align: center;
+        }
 
-    .menu-content {
-      display: none;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      background-color: #333;
-      width: 200px;
-    }
+        .topbar .back-button {
+            background-color: transparent;
+            color: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+        }
 
-    .menu-content a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      padding: 10px 20px;
-    }
+        .menu-button {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+        }
 
-    .menu-content a:hover {
-      background-color: #575757;
-    }
+        .menu-content {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 20px;
+            background-color: white;
+            border: 1px solid #ddd;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
 
-    .container {
-      width: 100%;
-      height: calc(100vh - 60px);
-      margin-top: 60px;
-      padding: 20px;
-      box-sizing: border-box;
-      overflow-y: auto;
-    }
+        .menu-content a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+        }
 
-    .card {
-      margin: 0 auto;
-    }
+        .menu-content a:hover {
+            background-color: #f4f4f4;
+        }
 
-    .profile-name-input {
-      margin-bottom: 16px;
-    }
+        .card {
+            margin: 0 auto;
+        }
 
-    .profile-card {
-      max-width: 400px;
-    }
+        .profile-name-input {
+            margin-bottom: 16px;
+        }
 
-    .modal-footer {
-      display: flex;
-      justify-content: center;
-    }
+        .profile-card {
+            max-width: 400px;
+        }
 
-    #profile-pic {
-      width: 100px;
-      height: 100px;
-      border-radius: 6px;
-      margin: 12px auto;
-      display: block;
-    }
+        .modal-footer {
+            display: flex;
+            justify-content: center;
+        }
 
-    #video {
-      width: 100%;
-      background-color: black;
-    }
-  </style>
+        #profile-pic {
+            width: 100px;
+            height: 100px;
+            border-radius: 6px;
+            margin: 12px auto;
+            display: block;
+        }
+
+        #video {
+            width: 100%;
+            background-color: black;
+        }
+    </style>
 </head>
-
 <body>
-  <div class="topbar">
-    <button class="menu-button" onclick="history.back()">&#8592;</button>
-    <div class="title">Profile</div>
-    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-    <div class="menu-content" id="menuContent">
-      <a href="bar_landing_page.html">Home</a>
-      <a href="profile.html">Profile</a>
-      <a href="settings.html">Settings</a>
-      <a href="mission.html">Mission</a>
-      <a href="faq.html">FAQs</a>
-    </div>
-  </div>
-  <div class="container">
-    <div class="card profile-card">
-      <div class="card-body">
-        <h5 class="card-title">My profile</h5>
-        <input id="name-input" type="text" class="form-control profile-name-input" value="User" placeholder="Name"
-          aria-label="Name" />
-        <div role="button" tabindex="0" data-bs-toggle="modal" data-bs-target="#profilePicModal">
-          <img id="profile-pic" src="../images/profile.svg" />
+    <div class="topbar">
+        <button class="back-button" onclick="history.back()">&lt;</button>
+        <div class="title">Over Drinks</div>
+        <button class="menu-button" onclick="toggleMenu()">☰</button>
+        <div class="menu-content" id="menuContent">
+            <a href="bar_landing_page.html">Home</a>
+            <a href="profile.html">Profile</a>
+            <a href="settings.html">Settings</a>
+            <a href="mission.html">Mission</a>
+            <a href="faq.html">FAQs</a>
         </div>
-        <p class="card-text">Click the picture above to change your profile picture!</p>
-        <hr />
-        <h5 class="card-title">My Interests</h5>
-        <textarea id="interests-input" class="form-control" rows="3" placeholder="Enter your interests here"></textarea>
-        <button id="save-interests" class="btn btn-primary mt-2">Save</button>
-      </div>
     </div>
+    <div class="profile-container">
+        <h2 class="text-center">Profile</h2>
+        <form id="datingInfoForm">
+            <div role="button" tabindex="0" data-bs-toggle="modal" data-bs-target="#profilePicModal" id="profile-click">
+                <img id="profile-pic" src="profile.svg" />
+            </div>
+            <div class="form-group">
+                <label for="gender">Gender</label>
+                <select class="form-control" id="gender">
+                    <option>Male</option>
+                    <option>Female</option>
+                    <option>Other</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="age">Age</label>
+                <input type="number" class="form-control" id="age" placeholder="Enter age">
+            </div>
+            <div class="form-group">
+                <label for="interests">Interests</label>
+                <input type="text" class="form-control" id="interests" placeholder="Enter interests">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Create Profile</button>
+        </form>
+    </div>
+    <div
+        class="modal fade"
+        id="profilePicModal"
+        tabindex="-1"
+        aria-labelledby="profilePicModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="profilePicModalLabel">Change profile pic</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-capture-window"></button>
+            </div>
+            <div class="modal-body">
+              <label for="profile-pic-file" class="form-label"> Say Cheese! </label>
 
-    <!-- This is where the popup modal lives. It won't render until the profile pic is clicked. -->
-    <div class="modal fade" id="profilePicModal" tabindex="-1" aria-labelledby="profilePicModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="profilePicModalLabel">Change profile pic</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <label for="profile-pic-file" class="form-label"> Say Cheese! </label>
-            <video id="video" autoplay></video>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" id="capture-btn">Capture and Set Profile Pic</button>
+              <video id="video" autoplay></video>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" id="capture-btn">Capture and Set Profile Pic</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <script>
-    function toggleMenu() {
-      const menuContent = document.getElementById('menuContent');
-      menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
-    }
-
-    const closeModal = () => {
-      const modal = document.getElementById("profilePicModal");
-      const modalInstance = bootstrap.Modal.getInstance(modal);
-      modalInstance.hide();
-    };
-
-    const resizeAndCropPic = (dataUrl) => {
-      return new Promise((resolve) => {
-        const canvas = document.createElement("canvas");
-        [canvas.width, canvas.height] = [512, 512];
-        const ctx = canvas.getContext("2d");
-
-        const img = new Image();
-        img.src = dataUrl;
-        img.onload = () => {
-          const [width, height] = [img.width, img.height];
-          const [shorter, longer] = width < height ? [width, height] : [height, width];
-          const [x, y] = width < height ? [0, (height - width) / 2] : [(width - height) / 2, 0];
-          ctx.drawImage(img, x, y, shorter, shorter, 0, 0, 512, 512);
-          const croppedDataUrl = canvas.toDataURL("image/jpeg");
-
-          resolve(croppedDataUrl);
+    <script>
+        var videostream;
+        window.onload = () => {
+            localStorage.setItem("currentWindow", "profile.html");
+            //document.getElementById("name-input").value = localStorage.getItem("username");
+            //if (localStorage.getItem("alreadyTakenPhoto")) {
+            if (localStorage.getItem("photo")) {
+            document.getElementById("profile-pic").src = localStorage.getItem("photo");
+            }
         };
-      });
-    };
-
-    window.onload = () => {
-      const savedName = localStorage.getItem("profileName");
-      const savedPic = localStorage.getItem("profilePic");
-      const savedInterests = localStorage.getItem("profileInterests");
-
-      if (savedName) {
-        document.getElementById("name-input").value = savedName;
-      }
-      if (savedPic) {
-        document.getElementById("profile-pic").src = savedPic;
-      }
-      if (savedInterests) {
-        document.getElementById("interests-input").value = savedInterests;
-      }
-
-      if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-        navigator.mediaDevices.getUserMedia({ video: true }).then((stream) => {
-          const video = document.getElementById("video");
-          video.srcObject = stream;
-          video.play();
-        }).catch((err) => {
-          console.error("Error accessing webcam: ", err);
+        function toggleMenu() {
+            const menuContent = document.getElementById('menuContent');
+            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
+        }
+        document.getElementById('datingInfoForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            window.location.href = 'bar_landing_page.html';
         });
-      }
-    };
-
-    document.getElementById("name-input").oninput = (event) => {
-      localStorage.setItem("profileName", event.target.value);
-    };
-
-    document.getElementById("capture-btn").onclick = async () => {
-      const video = document.getElementById("video");
-      const canvas = document.createElement('canvas');
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      const dataUrl = canvas.toDataURL('image/jpeg');
-
-      const resizedDataUrl = await resizeAndCropPic(dataUrl);
-      localStorage.setItem("profilePic", resizedDataUrl);
-      document.getElementById("profile-pic").src = resizedDataUrl;
-      closeModal();
-    };
-
-    document.getElementById("save-interests").onclick = () => {
-      const interests = document.getElementById("interests-input").value;
-      localStorage.setItem("profileInterests", interests);
-    };
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        document.getElementById("profile-click").addEventListener("click", openCaptureWindow);
+        function openCaptureWindow() {
+            navigator.mediaDevices.getUserMedia({audio: false, video: true}).then((stream) => {
+            //videostream = stream;
+            video.srcObject = stream;
+            videostream = stream;
+            }).catch((err) => {
+            alert(err);
+            });
+        }
+        document.getElementById("close-capture-window").addEventListener("click", closeCaptureWindow);
+        function closeCaptureWindow() {
+            //video.srcObject = null;
+            videostream.getTracks()[0].stop();
+            videostream.stop();
+        }
+        document.getElementById("capture-btn").onclick = function () {
+            const canvas = document.createElement("canvas");
+            canvas.width = 512; 
+            canvas.height = 512;
+            canvas.getContext("2d").drawImage(document.getElementById("video"), 0, 0, 512, 512);
+            localStorage.setItem("photo", canvas.toDataURL("image/jpeg"));
+            //localStorage.setItem("alreadyTakenPhoto", "true");
+            document.getElementById("profile-pic").src = localStorage.getItem("photo");
+            document.getElementById("close-capture-window").click();
+        };
+    </script>
+    <!-- Bootstrap JS and dependencies -->
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
