--- a/UserList.html
+++ b/UserList.html
@@ -126,7 +126,6 @@
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             flex-wrap: wrap;
-            cursor: pointer;
         }
         .profile img {
             border-radius: 50%;
@@ -248,7 +247,6 @@
     </div>
     
     <script>
-        // Static user profiles for testing
         const currentUserProfile = {
             name: "Alex",
             interests: ["Hiking", "Reading", "Cooking"],
@@ -262,28 +260,50 @@
             { name: "Morgan", description: "Travels often and enjoys music.", interests: ["Hiking", "Reading", "Cooking"], hobbies: ["Photography", "Traveling"], profession: "Data Scientist", img: "https://via.placeholder.com/150" }
         ];
 
+        const friendUserProfiles = [
+            { name: "Riley", description: "Enjoys photography and music.", interests: ["Photography", "Music", "Cooking"], hobbies: ["Traveling", "Writing"], profession: "Photographer", img: "https://via.placeholder.com/150" },
+            { name: "Jordan", description: "Loves painting and hiking.", interests: ["Painting", "Hiking", "Traveling"], hobbies: ["Cooking", "Music"], profession: "Artist", img: "https://via.placeholder.com/150" },
+            { name: "Parker", description: "Passionate about traveling and cooking.", interests: ["Traveling", "Cooking", "Music"], hobbies: ["Hiking", "Painting"], profession: "Chef", img: "https://via.placeholder.com/150" }
+        ];
+
+        const heartState = {}; // To track heart icon state
+
         function toggleMenu() {
             var menuContent = document.getElementById('menuContent');
             menuContent.classList.toggle('show');
         }
 
         function toggleHeart(event) {
-            var heart = event.target;
-            heart.classList.toggle('filled');
+            event.stopPropagation(); // Prevent popup from appearing
+            const heart = event.target;
+            const profileDiv = heart.parentElement;
+            const profileName = profileDiv.getAttribute('data-name');
+
+            if (!heartState[profileName]) {
+                heartState[profileName] = true;
+                heart.classList.add('filled');
+            } else {
+                heartState[profileName] = false;
+                heart.classList.remove('filled');
+            }
         }
 
         function toggleFriendMode() {
-            var initialProfiles = document.querySelector('.initial-profiles');
-            var friendModeProfiles = document.querySelector('.friend-mode');
-            var friendModeToggle = document.getElementById('friendModeToggle');
+            const initialProfiles = document.querySelector('.initial-profiles');
+            const friendModeProfiles = document.querySelector('.friend-mode');
+            const friendModeToggle = document.getElementById('friendModeToggle');
             
             if (friendModeToggle.checked) {
                 initialProfiles.classList.remove('active');
                 friendModeProfiles.classList.add('active');
+                loadFriendProfiles();
             } else {
                 friendModeProfiles.classList.remove('active');
                 initialProfiles.classList.add('active');
             }
+
+            // Reapply heart states for the currently visible profiles
+            applyHeartStates();
         }
 
         function toggleAIRecommendation() {
@@ -302,6 +322,17 @@
                 const profileDiv = createProfileDiv(profile);
                 profilesContainer.appendChild(profileDiv);
             });
+            applyHeartStates();
+        }
+
+        function loadFriendProfiles() {
+            const friendProfilesContainer = document.getElementById('friendProfilesContainer');
+            friendProfilesContainer.innerHTML = '';
+            friendUserProfiles.forEach(profile => {
+                const profileDiv = createProfileDiv(profile);
+                friendProfilesContainer.appendChild(profileDiv);
+            });
+            applyHeartStates();
         }
 
         async function generateSortedProfiles() {
@@ -335,6 +366,7 @@
                 const profileDiv = createProfileDiv(profile);
                 profilesContainer.appendChild(profileDiv);
             });
+            applyHeartStates();
         }
 
         function createProfileDiv(profile) {
@@ -369,11 +401,25 @@
             profileDiv.appendChild(descriptionDiv);
             profileDiv.appendChild(heart);
 
-            profileDiv.addEventListener('click', function () {
-                showPopup(profile);
+            profileDiv.addEventListener('click', function (event) {
+                if (!event.target.classList.contains('heart')) {
+                    showPopup(profile);
+                }
             });
 
             return profileDiv;
+        }
+
+        function applyHeartStates() {
+            document.querySelectorAll('.profile').forEach(profileDiv => {
+                const profileName = profileDiv.getAttribute('data-name');
+                const heart = profileDiv.querySelector('.heart');
+                if (heartState[profileName]) {
+                    heart.classList.add('filled');
+                } else {
+                    heart.classList.remove('filled');
+                }
+            });
         }
 
         function showPopup(profile) {
@@ -392,3 +438,4 @@
     </script>
 </body>
 </html>
+
