--- a/faq.html
+++ b/faq.html
@@ -52,8 +52,8 @@
 
 <div class="container">
     <div class="faq-item">
-        <div class="faq-question">What is this website about?</div>
-        <div class="faq-answer">This website is about providing information and services related to XYZ.</div>
+        <div class="faq-question">What is this app about?</div>
+        <div class="faq-answer">This app provides opportunities for users to interact in-person at bars and clubs.</div>
     </div>
     <div class="faq-item">
         <div class="faq-question">How can I create an account?</div>
