--- a/UserList.html
+++ b/UserList.html
@@ -207,7 +207,7 @@
 </head>
 <body>
     <div class="topbar">
-        <button class="back-button" onclick="window.location.href='bar_info_page.html'">&lt;</button>
+        <button class="back-button" onclick="window.history.back()">&lt;</button>
         <div class="title">List of Users</div>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
