--- a/UserList.html
+++ b/UserList.html
@@ -207,11 +207,11 @@
 </head>
 <body>
     <div class="topbar">
-        <button class="back-button" onclick="window.history.back()">&lt;</button>
+        <button class="back-button" onclick="window.location.href='bar_info_page.html'">&lt;</button>
         <div class="title">List of Users</div>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
-            <a href="bar_landing_page.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="profile.html">Profile</a>
             <a href="settings.html">Settings</a>
             <a href="faq.html">FAQs</a>
