--- a/UserList.html
+++ b/UserList.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>List of Users</title>
     <style>
         body {
@@ -14,55 +15,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-        }
-        .topbar {
-            background-color: #333333;
-            color: white;
-            padding: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .topbar .back-button {
-            background-color: transparent;
-            color: white;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
-        .topbar .title {
-            font-size: 24px;
-            flex-grow: 1;
-            text-align: center;
-        }
-        .topbar .menu-button {
-            background-color: transparent;
-            color: white;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
-        .menu-content {
-            display: none;
-            position: absolute;
-            background-color: white;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-            z-index: 1;
-            right: 15px;
-            top: 60px;
-        }
-        .menu-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-        .menu-content a:hover {
-            background-color: #ddd;
-        }
-        .menu-content.show {
-            display: block;
+            padding-top: 70px;
         }
         .matches-container {
             text-align: center;
@@ -206,18 +159,19 @@
     </style>
 </head>
 <body>
-    <div class="topbar">
-        <button class="back-button" onclick="window.location.href='bar_info_page.html'">&lt;</button>
-        <div class="title">List of Users</div>
-        <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-        <div class="menu-content" id="menuContent">
-            <a href="home.html">Home</a>
-            <a href="profile.html">Profile</a>
-            <a href="settings.html">Settings</a>
-            <a href="faq.html">FAQs</a>
-            <a href="mission.html">Mission</a>
-        </div>
+<header>
+    <button class="back-button" onclick="window.location.href='bar_info_page.html'">&lt;</button>
+    <h1> Users Nearby </h1> 
+    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+    <div class="menu-content" id="menuContent">
+        <a href="home.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="settings.html">Settings</a>
+        <a href="faq.html">FAQs</a>
+        <a href="mission.html">Mission</a>
+        
     </div>
+</header>
 
     <div class="matches-container">
         <button class="matches-button" onclick="window.location.href='MatchesList.html'">Matches</button>
