--- a/MatchesList.html
+++ b/MatchesList.html
@@ -119,7 +119,7 @@
 
 <div class="container">
     <div class="profile" data-name="User Name" data-description="This is a detailed description of the user. It gives a comprehensive overview of who they are and what they do." data-img="https://via.placeholder.com/150">
-        <img src="https://via.placeholder.com/100" alt="User Photo">
+        <img src="Profile1.jpg" alt="User Photo">
         <div class="profile-description">
             <h2>User Name</h2>
             <p>This is a short description of the user. It gives a brief overview of who they are and what they do.</p>
@@ -127,7 +127,7 @@
         <button class="invite-btn" onclick="navigateToEndingPage(event)">Invite</button>
     </div>
     <div class="profile" data-name="Another User" data-description="This is another detailed description of a different user. It provides similar comprehensive information as the previous profile." data-img="https://via.placeholder.com/150">
-        <img src="https://via.placeholder.com/100" alt="User Photo">
+        <img src="Profile2.jpg" alt="User Photo">
         <div class="profile-description">
             <h2>Another User</h2>
             <p>This is another description of a different user. It provides similar information as the previous profile.</p>
