--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <title>Profile</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
         html, body {
             height: 100%;
@@ -34,61 +35,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        .topbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: rgba(51, 51, 51, 0.8); /* Slight transparency */
-            color: white;
-            width: 100%;
-            position: fixed;
-            top: 0;
-        }
-
-        .topbar .title {
-            flex-grow: 1;
-            text-align: center;
-        }
-
-        .topbar .back-button {
-            background-color: transparent;
-            color: white;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        .menu-button {
-            background-color: transparent;
-            color: white;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        .menu-content {
-            display: none;
-            position: absolute;
-            top: 60px;
-            right: 20px;
-            background-color: white;
-            border: 1px solid #ddd;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-
-        .menu-content a {
-            display: block;
-            padding: 10px;
-            text-decoration: none;
-            color: #333;
-        }
-
-        .menu-content a:hover {
-            background-color: #f4f4f4;
-        }
-
+        
         .card {
             margin: 0 auto;
         }
@@ -121,18 +68,18 @@
     </style>
 </head>
 <body>
-    <div class="topbar">
-        <button class="back-button" onclick="history.back()">&lt;</button>
-        <div class="title">Over Drinks</div>
-        <button class="menu-button" onclick="toggleMenu()">☰</button>
-        <div class="menu-content" id="menuContent">
-            <a href="bar_landing_page.html">Home</a>
-            <a href="profile.html">Profile</a>
-            <a href="settings.html">Settings</a>
-            <a href="mission.html">Mission</a>
-            <a href="faq.html">FAQs</a>
-        </div>
+<header>
+    <button class="back-button" onclick="history.back()">&lt;</button>
+    <h1>Create Your Profile</h1>
+    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+    <div class="menu-content" id="menuContent">
+        <a href="bar_landing_page.html">Home</a>
+        <a href="profile.html">Profile</a>
+        <a href="settings.html">Settings</a>
+        <a href="faq.html">FAQs</a>
+        <a href="mission.html">Mission</a>
     </div>
+</header>
     <div class="profile-container">
         <h2 class="text-center">Profile</h2>
         <form id="datingInfoForm">
