--- a/bar_landing_page.html
+++ b/bar_landing_page.html
@@ -132,7 +132,8 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             transition: background-color 0.5s;
         }
-        .bar-item:hover{
+
+        .bar-item:hover {
             background-color: #eee;
 
         }
@@ -189,7 +190,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', async function () {
-            const bars = await fetch ("./bars.json").then(response=>response.json());
+            const bars = await fetch("./bars.json").then(response => response.json());
 
             const barList = document.getElementById('bar-list');
             const searchInput = document.getElementById('search-input');
@@ -209,24 +210,41 @@
                 pplCount: ['45', '100', '20', '13', '2', '17', '165', '55', '1', '0']
             };
 
+            // function displayBars(barsToDisplay) {
+            //     barList.innerHTML = '';
+            //     barsToDisplay.forEach(bar => {
+            //         const barItem = document.createElement('a');
+            //         barItem.className = 'bar-item';
+            //         barItem.href = `bar_info_page.html?id=${bar.id}&imageURL=${encodeURIComponent(bar.imageURL)}`;
+            //         barItem.innerHTML = `
+            //             <h2>${bar.name}</h2>
+
+
+
+            //         `;
+            //         barList.appendChild(barItem);
+            //     });
+            // }
+
             function displayBars(barsToDisplay) {
                 barList.innerHTML = '';
                 barsToDisplay.forEach(bar => {
                     const barItem = document.createElement('a');
                     barItem.className = 'bar-item';
-                    barItem.href = `bar_info_page.html?id=${bar.id}`;
+                    barItem.href = `bar_info_page.html?id=${bar.id}`;  // Updated to include id
                     barItem.innerHTML = `
-                        <h2>${bar.name}</h2>
-                        
-                       
-
-                    `;
+            <h2>${bar.name}</h2>
+            <p><strong>People Count:</strong> ${bar.pplCount}</p>
+            <p><strong>Logo:</strong> ${bar.logo}</p>
+        `;
                     barList.appendChild(barItem);
                 });
             }
             // // <a href="bar_info_page.html?id=${bar.id}">more info</a>
             // <p><strong>People Count:</strong> ${bar.pplCount}</p>
             //             <p><strong>Logo:</strong> ${bar.logo}</p>
+            // <img src="${bar.imageURL}" alt="${bar.name}" style="width: 100px; height: auto;"/>
+
 
             function filterBars() {
                 const selectedOption = filterOptions.value;
@@ -271,12 +289,12 @@
             document.addEventListener('click', (event) => {
                 if (!filterButton.contains(event.target) && !filterMenu.contains(event.target)) {
                     filterMenu.style.display = 'none';
-            }
-        });
+                }
+            });
 
-        // Display all bars on initial load
-        displayBars(bars);
-    });
-</script>
+            // Display all bars on initial load
+            displayBars(bars);
+        });
+    </script>
 
 </html>
