--- a/settings.html
+++ b/settings.html
@@ -220,7 +220,7 @@
 
         function logout() {
             // Redirect to home page on logout
-            window.location.href = "bar_landing_page.html";
+            window.location.href = "LoginScreen2.html";
         }
 
         window.onload = () => {
