--- a/Mission.html
+++ b/Mission.html
@@ -43,7 +43,7 @@
         <a href="profile.html">Profile</a>
         <a href="settings.html">Settings</a>
         <a href="faq.html">FAQs</a>
-        <a href="Missions.html">Missons</a>
+        <a href="mission.html">Missons</a>
     </div>
 </header>
 
