--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
 <body>
 <header>
     <button class="back-button" onclick="history.back()">&lt;</button>
-    <h1>Create Your Profile</h1>
+    <h1>Your Profile</h1>
     <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
     <div class="menu-content" id="menuContent">
         <a href="bar_landing_page.html">Home</a>
