--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -92,7 +92,7 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
     </form>
     <div class="text-center mt-3">
-        <a href="profile.html">Create Account</a>
+        <a href="create_profile.html">Create Account</a>
     </div>
 </div>
 
