--- a/settings.html
+++ b/settings.html
@@ -6,125 +6,9 @@
     <title>Settings</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .container {
-            width: 100%;
-            height: calc(100vh - 60px);
-            margin-top: 60px;
-            padding: 20px;
-            box-sizing: border-box;
-            overflow-y: auto;
-        }
-
-        .card {
-            margin: 0 auto;
-        }
-
-        .settings-option {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-
-        .settings-option h5 {
-            margin: 0;
-        }
-
-        .switch-icon {
-            width: 40px;
-            height: 24px;
-            background-color: #ddd;
-            border-radius: 12px;
-            position: relative;
-        }
-
-        .switch-icon::after {
-            content: "";
-            width: 20px;
-            height: 20px;
-            background-color: white;
-            border-radius: 50%;
-            position: absolute;
-            top: 2px;
-            left: 2px;
-            transition: left 0.3s;
-        }
-
-        .switch-on {
-            background-color: #007bff;
-        }
-
-        .switch-on::after {
-            left: 18px;
-        }
-
-        .logout-button {
-            display: block;
-            width: 100%;
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #dc3545;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .blacklist-content {
-            display: none;
-            padding: 10px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            height: calc(100vh - 120px); /* Adjusted for topbar and bottom button */
-            overflow-y: auto;
-            position: relative;
-            top: 60px; /* Adjusted to not be covered by topbar */
-        }
-
-        .user-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px;
-            background-color: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 10px;
-        }
-
-        .blacklist-switch-icon {
-            width: 20px;
-            height: 20px;
-            background-color: #ddd;
-            border-radius: 4px;
-            text-align: center;
-            line-height: 20px;
-            font-size: 18px;
-            color: #333;
-        }
-    </style>
 </head>
 <body>
     <header class="topbar">
@@ -140,7 +24,7 @@
         </div>
     </header>
     <div class="container" id="mainContent">
-        <div class="card">
+        <div class="settings-container">
             <div class="card-body">
                 <div class="settings-option" onclick="showBlacklist()">
                     <h5>Blacklist</h5>
