--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <button class="back-button" onclick="history.back()">&lt;</button>
-        <h1>Create Your Profile</h1>
+        <h1>Profile</h1>
         <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
         <div class="menu-content" id="menuContent">
             <a href="bar_landing_page.html">Home</a>
@@ -42,7 +42,7 @@
                 <label for="interests">Interests</label>
                 <input type="text" class="form-control" id="interests" placeholder="Enter interests">
             </div>
-            <button type="submit" class="btn-custom">Create Profile</button>
+            <button type="submit" class="btn-custom">Edit Profile</button>
         </form>
     </div>
     <div class="modal fade" id="profilePicModal" tabindex="-1" aria-labelledby="profilePicModalLabel" aria-hidden="true">
