--- a/LoginScreen2.html
+++ b/LoginScreen2.html
@@ -34,8 +34,11 @@
             </div>
             <button type="submit" class="btn-custom">Login</button>
         </form>
-        <div class="text-center mt-3">
+        <div class="text-center">
             <a href="create_profile.html">Create Account</a>
+        </div>
+        <div class="text-center">
+            <a href="ForgotPass.html">Forgot Username/Password</a> <!-- Added link -->
         </div>
     </div>
     <!-- Bootstrap JS and dependencies -->
