--- a/bar_info_page.html
+++ b/bar_info_page.html
@@ -274,7 +274,8 @@
 
 
         <!-- Check In Button -->
-        <button id="checkInButton" class="check-in-button">Check In</button>
+        <button id="checkInButton" class="check-in-button" onclick="window.location.href='UserList.html'" >Check In</button>
+     
 
         <!-- Bar List -->
         <div class="bar-list" id="barList"></div>
